--- a/crm/templates/base/base.html
+++ b/crm/templates/base/base.html
@@ -179,16 +179,31 @@
 
                              <li class=" sidebar-layout">
                                 <a href="{% url 'crm:course-list' %}" class="svg-icon">
-                                    <i class="fas fa-list">
+                                    <i class="fas fa-book">
 
                                     </i><span class="">Course list</span>
                                 </a>
                             </li>
                              <li class=" sidebar-layout">
                                 <a href="{% url 'crm:user-list' %}" class="svg-icon">
-                                    <i class="fas fa-list">
+                                    <i class="fas fa-user">
 
                                     </i><span class="">User list</span>
+                                </a>
+                            </li>
+
+                             <li class=" sidebar-layout">
+                                <a href="{% url 'crm:permisson-settings' %}" class="svg-icon">
+                                    <i class="fas fa-list">
+
+                                    </i><span class="">Permisson Settings</span>
+                                </a>
+                            </li>
+                             <li class=" sidebar-layout">
+                                <a href="{% url 'crm:privacy-settings' %}" class="svg-icon">
+                                    <i class="fas fa-list">
+
+                                    </i><span class="">Privacy Settings</span>
                                 </a>
                             </li>
                         </ul>
@@ -1188,7 +1203,7 @@
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                   d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
                                         </svg>
-                                        <a href="app/user-profile.html">My Profile</a>
+                                        <a href="{% url 'accounts:my-profile' %}">My Profile</a>
                                     </li>
                                     <li class="dropdown-item d-flex svg-icon">
                                         <svg class="svg-icon me-0 text-secondary" id="h-02-p" width="20"
