--- a/crm/templates/settings/my-profile/edit-profile.html
+++ b/crm/templates/settings/my-profile/edit-profile.html
@@ -69,7 +69,7 @@
                                                    placeholder="First name" maxlength="100" required id="id_first_name">
                                         </div>
                                     </div>
-                                  <!-- Last Name -->
+                                    <!-- Last Name -->
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="id_last_name" class="requiredField">
@@ -105,7 +105,7 @@
                                         </div>
                                     </div>
 
-                                       <!-- Image -->
+                                    <!-- Image -->
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="id_user_image" class="requiredField">
@@ -125,11 +125,11 @@
                                         </div>
                                     </div>
 
-                                 <!-- Position -->
+                                    <!-- Position -->
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="id_position" class="requiredField">
-                                                Last name <span class="asteriskField">*</span>
+                                                Position <span class="asteriskField">*</span>
                                             </label>
                                             <input type="text" name="position" value="{{ form.position.value }}"
                                                    class="form-control textinput textInput" autofocus
