add: educlass base html

--- a/crm/templates/crm/customers/customer-list.html
+++ b/crm/templates/crm/customers/customer-list.html
@@ -185,7 +185,7 @@
                                                     <td>
                                                         {{ obj.get_status_display }}
                                                     </td>
-                                                    <td>{{ obj.price }}</td>
+                                                    <td>{{ obj.price }} ({{ obj.course_or_trainingscurrency }})</td>
                                                     <td>{{ obj.created_at|date:"j F Y" }}</td>
 
 
