--- a/crm/templates/crm/order/order-add.html
+++ b/crm/templates/crm/order/order-add.html
@@ -60,4 +60,49 @@
         </div>
     </div>
 
+    <!-- JQuery & Script -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        function updateTotalAmount() {
+            var price = parseFloat($('#id_price').val());
+            var participants = parseInt($('#id_participants').val());
+            if (!isNaN(price) && !isNaN(participants)) {
+                var total = price * participants;
+                $('#id_total_amount').val(total.toFixed(2));
+            } else {
+                $('#id_total_amount').val('');
+            }
+        }
+
+        // Kurs seçiləndə qiyməti doldur və total hesablansın
+        $('#id_course').change(function () {
+            var courseId = $(this).val();
+            if (courseId) {
+                $.ajax({
+                    url: "{% url 'crm:get_course_price' %}",
+                    data: {
+                        'course_id': courseId
+                    },
+                    success: function (data) {
+                        if (data.price !== null) {
+                            $('#id_price').val(data.price);
+                            updateTotalAmount();  // qiymət gələn kimi total yenilə
+                        }
+                    }
+                });
+            } else {
+                $('#id_price').val('');
+                updateTotalAmount();
+            }
+        });
+
+        // İstifadəçi price və ya participants dəyişəndə də total hesablansın
+        $('#id_price, #id_participants').on('input', function () {
+            updateTotalAmount();
+        });
+    });
+</script>
+
+
 {% endblock %}
