--- a/educlass/templates/edubase/base.html
+++ b/educlass/templates/edubase/base.html
@@ -3,12 +3,19 @@
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Edupo | EduClass Dashboard</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="{% static 'assets/images/favicon.ico' %}"/>
     <!-- Library / Plugin Css Build -->
+
+
+    <!-- Sonra Select2 JS -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+
+
     <link rel="stylesheet" href="{% static 'assets/css/core/libs.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/datum.mine209.css' %}">
     {% block calendar_css %}
@@ -26,6 +33,8 @@
     <link
             href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&amp;display=swap"
             rel="stylesheet">
+    {% block css %}
+    {% endblock %}
 </head>
 <body class="  ">
 <!-- loader Start -->
@@ -36,7 +45,7 @@
 <!-- loader END -->
 <!-- Wrapper Start -->
 <div class="wrapper">
-    <div class="iq-sidebar  sidebar-default  ">
+    <div class="iq-sidebar  sidebar-default ">
         <div class="iq-sidebar-logo d-flex align-items-end justify-content-between">
             <a href="{% url "crm:crm-dashboard" %}" class="header-logo">
                 <img src="{{ request.user.company.company_logo.url }}" class="img-fluid rounded-normal " alt="logo">
@@ -65,29 +74,17 @@
                                           d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
                                 </svg>
                             </i>
-                            <span class="ms-2">Home</span>
+                            <span class="ms-2">Dashboard</span>
                         </a>
                     </li>
                     <li class="px-3 pt-3 pb-2 ">
                         <span class="text-uppercase small fw-bold">Main menu</span>
                     </li>
                     <li class=" sidebar-layout">
-                        <a href="{% url 'crm:customers' %}" class="svg-icon ">
-                            <i class="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="18" fill="none" viewBox="0 0 24 24"
-                                     stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                          d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"/>
-                                </svg>
-                            </i>
-                            <span class="ms-2">{% trans 'Customers' %}</span>
-                        </a>
-                    </li>
-                    <li class=" sidebar-layout">
                         <a href="#app12" class="collapsed svg-icon" data-bs-toggle="collapse" aria-expanded="false">
                             <i class="fas fa-building">
                             </i>
-                            <span class="ms-2">Companies</span>
+                            <span class="ms-2">Academy</span>
                             <svg xmlns="http://www.w3.org/2000/svg" class="svg-icon iq-arrow-right arrow-active"
                                  width="15"
                                  fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -96,16 +93,28 @@
                         </a>
                         <ul id="app12" class="submenu collapse" data-parent="#iq-sidebar-toggle">
                             <li class=" sidebar-layout">
-                                <a href="{% url 'crm:user-companies' %}" class="svg-icon">
+                                <a href="{% url 'educlass:course_view' %}" class="svg-icon">
                                     <i class="fas fa-list">
 
-                                    </i><span class="">Company list</span>
+                                    </i><span class="">Courses</span>
                                 </a>
                             </li>
                             <li class=" sidebar-layout">
                                 <a href="{% url 'crm:contacts' %}" class="svg-icon">
                                     <i class="fas fa-users">
-                                    </i><span class="">Contacts</span>
+                                    </i><span class="">Classes</span>
+                                </a>
+                            </li>
+                            <li class=" sidebar-layout">
+                                <a href="{% url 'crm:contacts' %}" class="svg-icon">
+                                    <i class="fas fa-users">
+                                    </i><span class="">Timetable</span>
+                                </a>
+                            </li>
+                            <li class=" sidebar-layout">
+                                <a href="{% url 'crm:contacts' %}" class="svg-icon">
+                                    <i class="fas fa-users">
+                                    </i><span class="">Certificate</span>
                                 </a>
                             </li>
                         </ul>
@@ -529,6 +538,9 @@
         window.location.href = selectedUrl; // Redirect to selected URL
     });
 </script>
+<!-- jQuery əvvəl -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </body>
 
 </html>
