--- a/educlass/templates/course/course-list.html
+++ b/educlass/templates/course/course-list.html
@@ -146,7 +146,7 @@
                                                         {{ obj.category }}
                                                     </td>
                                                     <td>
-                                                        {{ obj.level }}
+                                                        {{ obj.get_level_display }}
                                                     </td>
 
                                                     <td>
