--- a/educlass/templates/edubase/base.html
+++ b/educlass/templates/edubase/base.html
@@ -100,7 +100,7 @@
                                 </a>
                             </li>
                             <li class=" sidebar-layout">
-                                <a href="{% url 'crm:contacts' %}" class="svg-icon">
+                                <a href="{% url 'educlass:class_list' %}" class="svg-icon">
                                     <i class="fas fa-users">
                                     </i><span class="">Classes</span>
                                 </a>
