--- a/educlass/templates/class/class-list.html
+++ b/educlass/templates/class/class-list.html
@@ -7,7 +7,7 @@
                 <div class="col-lg-12">
                     <div class="d-flex flex-wrap align-items-center justify-content-between gap-3 my-schedule mb-4">
                         <div class="d-flex align-items-center justify-content-between">
-                            <h4 class="fw-bold">Course Management</h4>
+                            <h4 class="fw-bold">Class Management</h4>
                         </div>
                         <div class="create-workform">
                             <div class="d-flex flex-wrap align-items-center justify-content-between">
@@ -26,14 +26,14 @@
                                             </a>
                                         </div>
                                     </form>
-                                    <a href="{% url 'educlass:course-add' %}"
+                                    <a href="{% url 'educlass:class-add' %}"
                                        class="btn btn-primary position-relative d-flex align-items-center justify-content-between">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="me-2" width="20" fill="none"
                                              viewBox="0 0 24 24" stroke="currentColor">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                   d="M12 6v6m0 0v6m0-6h6m-6 0H6"/>
                                         </svg>
-                                        Add Course
+                                        Add Class
                                     </a>
                                 </div>
                             </div>
@@ -44,7 +44,7 @@
                             <div class="card car card-stretch">
                                 <div class="card-body p-0">
                                     <div class="d-flex justify-content-between align-items-center p-3 pb-md-0">
-                                        <h5 class="fw-bold">Course List</h5>
+                                        <h5 class="fw-bold">Class List</h5>
                                         <button class="btn btn-secondary btn-sm">
                                             <svg xmlns="http://www.w3.org/2000/svg" class="me-1" width="20" fill="none"
                                                  viewBox="0 0 24 24" stroke="currentColor">
