--- a/educlass/templates/class/class-list.html
+++ b/educlass/templates/class/class-list.html
@@ -175,7 +175,7 @@
                                                         <div class="d-flex justify-content-start  align-items-center">
                                                             <a class="" data-bs-toggle="tooltip" data-bs-placement="top"
                                                                title="Edit"
-                                                               href="{% url 'educlass:course-update' obj.slug %}">
+                                                               href="{% url 'educlass:class-update' obj.slug %}">
                                                                 <svg xmlns="http://www.w3.org/2000/svg"
                                                                      class="text-secondary mx-4" width="20" fill="none"
                                                                      viewBox="0 0 24 24" stroke="currentColor">
